# JustPay_App

./: .gitignore  CMakeLists.txt  README.md  main_qt.cpp
.github/workflows/: justpay_runner.yml
Include/Helpers/: CsvExporter.h  PayrollCalculations.h
Include/Models/: DataObjects.h  QObjects.h  accounting.h  overtime.h  payroll.h  remittance.h  reporting.h
Include/Models/Core/: DataObjects.h  QObjects.h  employee.h
Include/Models/ForwardDeclarations/: fwd.h
Include/Models/Primitives/: date.h  enums.h
Include/Repositories/: AttendanceLogRepository.h  BaseRepository.h  BudgetPeriodRepository.h  DepartmentBudgetRepository.h  DependentRepository.h  EmergencyContactRepository.h  EmployeeRepository.h  GovernmentRemittanceRepository.h  JournalEntryRepository.h  LeaveRepository.h  LoanLedgerRepository.h  PayrollRepository.h
Include/Services/: AppContext.h  AttendanceLogService.h  BudgetUtilService.h  DependentService.h  EmergencyContactService.h  EmployeeService.h  GovernmentRemittanceService.h  JournalEntryService.h  LeaveBalanceService.h  LoanLedgerService.h  PayrollService.h  TaxReconciliationService.h  YearEndBenefitsService.h
Include/UI/: Add_Dependent_Dialog.h  Add_Emergency_Contact_Dialog.h  Add_Employee_Dialog.h  Add_Loan_Ledger_dialog.h  Add_Overtime_Hours_Dialog.h  Add_Sql_Description.h  Add_Time_Log_Dialog.h  Annualized_Tax_Reconciliation.h  Attendance_List_Widget.h  Edit_Dependent_Details.h  Edit_Emergency_Contact_Details.h  Edit_Employee_Details.h  Email_Login_Widget.h  Employee_Attendance_Widget.h  Employee_Details_Widget.h  Employee_Validation_Widget.h  Govern_Remittance_Widget.h  Loan_Ledger_Widget.h  MainWindow.h  Payroll_Widget.h  Payslip_Generation_Widget.h  Premium_Values_Widget.h  Reports_Logs_Widget.h  Results_Widget.h  SqlQueryWidget.h
Include/UI/AdminSettings/: Email_Login_Widget.h
Include/UI/AttendanceTracking/: Add_Overtime_Hours_Dialog.h  Add_Time_Log_Dialog.h  Attendance_List_Widget.h
Include/UI/Employee_Management/: Add_Dependent_Dialog.h  Add_Emergency_Contact_Dialog.h  Add_Employee_Dialog.h  Add_Loan_Ledger_dialog.h  Edit_Dependent_Details.h  Edit_Emergency_Contact_Details.h  Edit_Employee_Details.h  Employee_Attendance_Widget.h  Employee_Details_Widget.h  Loan_Ledger_Widget.h
Include/UI/PayrollComputation/: Payroll_Widget.h  Premium_Values_Widget.h  Results_Widget.h
Include/UI/PayslipGeneration/: Payslip_Generation_Widget.h  Payslip_Preview_Dialog.h
Include/UI/Reports-Logs/: Annualized_Tax_Reconciliation.h  Budget_Util_Widget.h  Govern_Remittance_Widget.h  Journal_Entry_Widget.h  Payroll_Register_Widget.h  Reports_Logs_Widget.h  YearEnd_Benefit_Widget.h
Include/Utils/: AuthService.h  BaseContentWidget.h  BaseMenu.h  DialogFactory.h  Log.h  MenuManager.h  Parser.h
Resources/: emailCrudentials.json  history.txt  menu.json  resources.qrc
Resources/docs/: payslip.html
Resources/sql/: attendancelog.sql  budgetperiods.sql  departmentbudgets.sql  dependent.sql  emergencycontact.sql  employee.sql  employeeleavebalances.sql  governmentremittance.sql  journalentry.sql  loanledger.sql  payroll.sql
Resources/styles/: dark.qss  light.qss  win98.qss
Resources/theme/: dark.qss  light.qss  light_w_blue.qss  win7.qss  win98.qss  winxp.qss
Source/Helpers/: CsvExporter.cpp  PayrollCalculations.cpp
Source/Repos/: AttendanceLogRepository.cpp  BaseRepository.cpp  BudgetPeriodRepository.cpp  DepartmentBudgetRepository.cpp  DependentRepository.cpp  EmergencyContactRepository.cpp  EmployeeRepository.cpp  GovernmentRemittanceRepository.cpp  JournalEntryRepository.cpp  LeaveRepository.cpp  LoanLedgerRepository.cpp  PayRollRepository.cpp
Source/Services/: AppContext.cpp  AttendanceLogService.cpp  BudgetUtilService.cpp  DependentService.cpp  EmergencyContactService.cpp  EmployeeService.cpp  GovernmentRemittanceService.cpp  JournalEntryService.cpp  LeaveBalanceService.cpp  LoanLedgerService.cpp  PayrollService.cpp  TaxReconciliationService.cpp  YearEndBenefitsService.cpp
Source/Utils/: AuthService.cpp  BaseContentWidget.cpp  BaseMenu.cpp  DialogFactory.cpp  MenuManager.cpp  Parser.cpp
Tests/: CMakeLists.txt  test_attendance_repo.cpp  test_base_repo.cpp  test_budget_period_repo.cpp  test_budget_util_service.cpp  test_contact_repo.cpp  test_department_budget_repo.cpp  test_dependent_repo.cpp  test_employee_repo.cpp  test_government_remittance_repo.cpp  test_governmentremit_service.cpp  test_leave_repo.cpp  test_leavebalance_service.cpp  test_loan_ledger_repo.cpp  test_payroll_calc.cpp  test_payroll_repo.cpp  test_payroll_service.cpp  test_tax_reconciliation_service.cpp  test_yearendbenefits_service.cpp  tests.sql
UI/Dialogs/: add_employee_dialog.ui  add_loan_ledger_dialog.ui  add_overtime_hours_dialog.ui  add_sql_description.ui  add_time_log_dialog.ui  annualized_tax_reconciliation.ui  attendance_list_widget.ui  budget_utilization.ui  edit_dependent_details.ui  edit_emergency_contact_details.ui  edit_employee_details.ui  email_login_widget.ui  employee_attendance_widget.ui  employee_details_widget.ui  employee_name_edit.ui  employee_validation_widget.ui  gov_remittance.ui  journal_entries.ui  loan_ledger_widget.ui  payroll_registers.ui  payroll_widget.ui  payslip_widget.ui  premium_values_widget.ui  reports_logs_widget.ui  results_widget.ui  sql_module.ui  year-end_benefits.ui
UI/Windows/: Add_Dependent_Dialog.cpp  Add_Emergency_Contact_Dialog.cpp  Add_Employee_Dialog.cpp  Add_Loan_Ledger.cpp  Add_Overtime_Hours_Dialog.cpp  Add_Sql_Description.cpp  Add_Time_Log_Dialog.cpp  Annual_Tax_Widget.cpp  Attendance_List_Widget.cpp  Budget_Util_Widget.cpp  Edit_Dependent_Details.cpp  Edit_Emergency_Contact_Details.cpp  Edit_Employee_Details.cpp  Email_Login_Widget.cpp  Employee_Attendance_Widget.cpp  Employee_Details_Widget.cpp  Employee_Validation_Widget.cpp  Govern_Remittance_Widget.cpp  Journal_Entry_Widget.cpp  Loan_Ledger_Widget.cpp  MainWindow.cpp  Payroll_Register_Widget.cpp  Payroll_Widget.cpp  Payslip_Generation_Widget.cpp  Premium_Values_Widget.cpp  Reports_Logs_Widget.cpp  Results_Widget.cpp  SqlQueryWidget.cpp  YearEnd_Benefit_Widget.cpp
(+31 files in other folders)
